tests/ui/resolve/issue-113808-invalid-unused-qualifications-suggestion.stderr
error: unnecessary qualification
  --> $DIR/issue-113808-invalid-unused-qualifications-suggestion.rs:13:6
   |
LL | impl ops::Index<str> for A {
   |      ^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/issue-113808-invalid-unused-qualifications-suggestion.rs:4:9
   |
LL | #![deny(unused_qualifications)]
   |         ^^^^^^^^^^^^^^^^^^^^^
help: remove the unnecessary path segments
   |
LL - impl ops::Index<str> for A {
LL + impl Index<str> for A {
   |

error: unnecessary qualification
  --> $DIR/issue-113808-invalid-unused-qualifications-suggestion.rs:39:6
   |
LL | impl inner::Trait<u8> for () {}
   |      ^^^^^^^^^^^^^^^^
   |
help: remove the unnecessary path segments
   |
LL - impl inner::Trait<u8> for () {}
LL + impl Trait<u8> for () {}
   |

error: aborting due to 2 previous errors

